--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" />
     <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBIUUEUoLYKBnVKGvVjLchBzdMR-CUa5A4&v=3.exp&libraries=geometry,drawing,places"></script>
     <title>RealEstateIntegrate</title>
   </head>
   <body>
