--- a/widget.html
+++ b/widget.html
@@ -5,6 +5,6 @@
 </head>
 <body>
     <div id="root"></div>
-    <script src="./build/static/js/main.0cb646c2.js"></script>
+    <script src="https://embed.realestateintegrate.com/static/js/main.0cb646c2.js"></script>
 </body>
 </html>
